[tool.poetry]
name = "brewblox-plaato"
version = "0.1.0"
description = "Brewblox service for the Plaato airlock"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^2.1.0"
cryptography = "41.0.0"

[tool.poetry.dev-dependencies]
aresponses = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
pytest = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry>=0.12", "cryptography==41.0.0"]
build-backend = "poetry.masonry.api"
