[tool.poetry]
name = "brewblox-plaato"
version = "0.1.0"
description = "Brewblox service for the Plaato airlock"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.1.2"
cryptography = "40.0.1"

[tool.poetry.group.dev.dependencies]
aresponses = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
pytest = "*"
flake8-quotes = "*"
invoke = "^2.2.0"

[build-system]
requires = ["poetry>=0.12", "cryptography==40.0.1"]
build-backend = "poetry.masonry.api"
